--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-# This file is here because many Platforms as a Service look for
-#	requirements.txt in the root directory of a project.
--r requirements/development.txt
+Fabric==1.8.1
+ecdsa==0.10
+logging==0.4.9.6
+paramiko==1.12.1
+psycopg2==2.5.2
+pycrypto==2.6.1
+sleekxmpp==1.1.11
+wsgiref==0.1.2
